--- a/Forum/Components/MarkdownView.razor
+++ b/Forum/Components/MarkdownView.razor
@@ -9,7 +9,7 @@
 	}
 	
 	.md-view h1, .md-view h2, .md-view h3, .md-view h4, .md-view h5, .md-view h6 {
-		color: #98971A;
+		color: #ebdbb2;
 	}
 </style>
 
