fix: correctly parse tags in search query, don't add them to the db\!

--- a/Forum/Components/InfoMessage.razor
+++ b/Forum/Components/InfoMessage.razor
@@ -5,7 +5,7 @@
 
 <style>
 	#helper-container {
-		position: absolute;
+		position: fixed;
 		bottom: 5%; right: 0; left: 0;
 		margin: auto;
 		width: 25rem;
