--- a/Forum/Components/MarkdownView.razor
+++ b/Forum/Components/MarkdownView.razor
@@ -11,6 +11,10 @@
 	.md-view h1, .md-view h2, .md-view h3, .md-view h4, .md-view h5, .md-view h6 {
 		color: #ebdbb2;
 	}
+	
+	.md-view hr {
+		background: #ebdbb2;
+	}
 </style>
 
 <div class="md-view">
