--- a/Forum/Components/CommentField.razor
+++ b/Forum/Components/CommentField.razor
@@ -22,6 +22,7 @@
 	/* Delegate: A type that represents references to methods with particular parameters and return type. Any method
 	 * that matches the parameters and return type can be assigned to it. The assigned method can then be invoked/called
 	 * through the delegate instance.
+	 * A delegate object represents both, the method to call and the instance to call it upon.
 	 */
 	public delegate Task Update();
 	
