--- a/Forum/Pages/Index.razor
+++ b/Forum/Pages/Index.razor
@@ -255,6 +255,9 @@
 		await UpdatePageAsync();
 	}
 
+	/// <summary>
+	/// Show only saved posts.
+	/// </summary>
 	private async Task ShowSavedAsync()
 	{
 		_savedOnly = !_savedOnly;
